fix(journalSection): add fixed height to prevent layout shift while loading content

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 
+/* custom subtle scrollbar for JournalSection */
+.subtle-scrollbar::-webkit-scrollbar {
+  width: 6px;
+  background: transparent;
+}
+.subtle-scrollbar::-webkit-scrollbar-thumb {
+  background: rgba(0,0,0,0.05);
+  border-radius: 6px;
+}
+.subtle-scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.subtle-scrollbar {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(0,0,0,0.05 ) transparent;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -25,7 +43,6 @@ body {
   padding: 5px 0;
 }
 
-
 .nav-item.active::after {
   /* width: 100%; */
   /* color: #D4A95E;
@@ -41,8 +58,6 @@ body {
   color: #F6E27F;
   color: #AA7D2A; */
 /* ; */
-
-
 }
 
 
